--- a/TCP-EQUIPO5B-ENTRENAPP/Site.Master
+++ b/TCP-EQUIPO5B-ENTRENAPP/Site.Master
@@ -48,7 +48,8 @@
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Usuarios">Alta</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/PerfilAlumno">Mi Perfil</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/PerfilAlumno">Mi Perfil Alu</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/PerfilProfesor">Mi Perfil Profe</a></li>
                         
                     </ul>
                     <ul class="navbar-nav ms-auto">
