--- a/TCP-EQUIPO5B-ENTRENAPP/Site.Master
+++ b/TCP-EQUIPO5B-ENTRENAPP/Site.Master
@@ -58,13 +58,13 @@
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Usuarios">Alta</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/PerfilAlumno">Mi Perfil Alu</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/PerfilProfesor">Mi Perfil Profe</a></li>
+                        <li class="nav-item" id="liPerfilAlumno" runat="server"><a class="nav-link" runat="server" href="~/PerfilAlumno">Mi Perfil Alu</a></li>
+                        <li class="nav-item" id="liPerfilProfe" runat="server"><a class="nav-link" runat="server" href="~/PerfilProfesor">Mi Perfil Profe</a></li>
 
                     </ul>
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Login">Login</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Login">Cerrar sesión</a></li>
+                        <li class="nav-item" id="liLogin" runat="server"><a class="nav-link" runat="server" href="~/Login">Login</a></li>
+                        <li class="nav-item" id="liCerrarSesion" runat="server"><a class="nav-link" runat="server" href="~/Login">Cerrar sesión</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contacto</a></li>
                     </ul>
                 </div>
